services/auth/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 8080
